# claudeD

./: .env.example  .gitignore  .mcp.json  README.md  pyproject.toml
.claude/agents/: cool.md  dup.md  test-agent.md
docs/: TESTING.md
docs/e2e/: command-inventory.md
docs/investigations/: stale-message-content.md  truncation.md
docs/prd/: chore-295-session-cleanup.md  discord-claude-bridge.md  feat-286-sdk-upgrade.md  feat-289-windows.md  feat-291-default-effort.md  feat-292-dynamic-workflow.md  feat-292-workflow-v2.md  feat-304-log-dump-transcript.md  fix-245-safe-send.md  fix-247-model-stale.md  fix-248-cost-undercount.md  fix-250-session-resolve.md  fix-252-save-race.md  fix-254-255-257-cog-validation.md  fix-263-context-pct.md  fix-273-model-switch.md  fix-274-smart-split.md  fix-277-resume-session-id.md  fix-279-session-info.md  fix-280-context-stale.md  fix-281-webfetch-embed.md  fix-285-ghost-bridge.md  fix-293-list-runtime.md  fix-301-early-session-persist.md  fix-306-subagent-task-conflict.md  fix-308-table-render.md  fix-309-workflow-progress.md  fix-310-subagent-notify.md  fix-311-flush-before-subagent.md  refactor-294-cli-native.md  v1.1-ux-improvements.md  v1.10-sdk-migration.md  v1.11-unbound-fallback.md  v1.12-table-rendering.md  v1.13-skill-list.md  v1.14-cascade-resilience.md  v1.15-launchagent.md  v1.17-mention-toggle.md  v1.18-cjk-font-tofu.md  v1.18-e2e-full-coverage.md  (+29 more)
scripts/: clear-global-slash-commands.py  com.hxy.clauded.healthcheck.plist.template  com.hxy.clauded.plist.template  e2e_truncation.py  health-check.sh  install-launchagent.sh  replay_renderer.py  replay_renderer_v2.py  replay_with_failures.py  repro_truncation.py  repro_with_tools.py  selftest.py  stress_renderer.py  uninstall-launchagent.sh
scripts/e2e/: run_e2e.py  run_real_e2e.py
tests/: conftest.py  test_agent_manager.py  test_api_error_render.py  test_bg_task_refs.py  test_binding_id_resolution.py  test_bot_fire_callbacks.py  test_bot_unbound_message.py  test_btw_command.py  test_cascade_resilience.py  test_channel_markers.py  test_cjk_font_tofu.py  test_claude_bridge.py  test_cleanup_deadlock.py  test_cogs_schedule.py  test_cogs_workflow.py  test_config.py  test_context_cmd.py  test_context_footer.py  test_context_thread_session.py  test_context_window_override.py  test_copy_table_view.py  test_cost_tracker.py  test_diff_cmd.py  test_diff_display.py  test_e2e_suite.py  test_error_footer_and_gateway.py  test_errors_taxonomy.py  test_exception_swallow_upgrades.py  test_features_68_73.py  test_features_87_91.py  test_footer_context_race.py  test_group_a_unbound.py  test_health_check_script.py  test_heartbeat_gateway_gate.py  test_hooks_and_partial.py  test_http_retry.py  test_image.py  test_image_attach.py  test_image_inline_content_blocks.py  test_image_preprocess.py  (+57 more)
(+48 files in other folders)
