[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clauded"
version = "0.1.0"
description = "Discord-Claude Bridge: expose Claude Code via a Discord bot"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [
    { name = "claudeD contributors" },
]
dependencies = [
    "discord.py>=2.4,<3.0",
    "claude-agent-sdk>=0.2.100,<0.3",
    "python-dotenv>=1.0",
    "Pillow>=10",
    "croniter>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.21"]

[project.scripts]
clauded = "clauded.bot:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
markers = [
    "live_host: test mutates real host state (e.g. launchctl kickstart of the live LaunchAgent). Excluded by default so a plain `pytest` run can never restart a running clauded bot. Run explicitly with `-m live_host` (still safe — such tests shim the host binary).",
]
# Never touch the live host by default. The health-check kickstart tests are
# marked `live_host`; excluding that marker keeps a plain `pytest` run from
# hard-killing a running clauded — its `launchctl kickstart -k
# gui/<uid>/com.hxy.clauded` targets a uid-scoped launchd domain that HOME
# isolation cannot redirect. See tests/test_health_check_script.py.
addopts = "-m 'not live_host'"
